# polyfetch-scrape

./: .gitignore  AGENTS.md  AGENT_LEARNINGS.md  AGENT_REQUESTS.md  NOTICE  README.md  pyproject.toml
.claude/: settings.json
docs/: roadmap.md  scraping-landscape.md
