[project]
name = "polyfetch-scrape"
version = "0.0.0"
description = "Reusable HTTP scraping toolkit: httpx fallback chain + document-domain API wrappers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
license-files = ["LICENSE", "NOTICE"]
authors = [{name = "qte77"}]
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyfetch_scrape"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
